fixes Popover `z-index` when usd in Modal, resolves #398

--- a/less/variables.less
+++ b/less/variables.less
@@ -221,12 +221,12 @@
 @z-index-topbar-fixed:      @global-z-index;
 @z-index-sticky:            @global-z-index + 10;
 @z-index-dropdown:          @global-z-index + 20;
-@z-index-popover:           @global-z-index + 30;
 @z-index-offcanvas:         @global-z-index + 90;
 @z-index-dimmer:            @global-z-index + 100;
 @z-index-modal:             @global-z-index + 110;
 @z-index-datepicker:        @global-z-index + 120;
 @z-index-pureview:          @global-z-index + 120;
+@z-index-popover:           @global-z-index + 150;
 @z-index-nprogress:         @global-z-index + 1000;
 
 // Widgets
